Documentation: Adjust iFrame height to avoid overflow

--- a/docs/page.css
+++ b/docs/page.css
@@ -69,7 +69,7 @@ code {
 
 iframe {
 	width: 100%;
-	height: 420px;
+	height: 500px;
 	border:0;
 }
 
